# vibe-quality-searcharr

./: .bandit  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SECURITY_ASSESSMENT_POST_FIX.md  DASHBOARD_DEVELOPER_GUIDE.md  PHASE1_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE5_SUMMARY.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_VERIFICATION_CHECKLIST.md  PHASE_6_COMPLETE.md  PHASE_6_IMPLEMENTATION.md  PHASE_6_PAGE_FLOW.md  PHASE_6_SUMMARY.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PRD.md  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_STATUS.md  RATE_LIMITING_REDIS_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_FIXES_COMPLETED.md  SECURITY_FIXES_IN_PROGRESS.md  SECURITY_IMPLEMENTATION.md  SECURITY_PENETRATION_TEST_REPORT.md  TECH_STACK.md  coverage.json  docker-compose.yml  index.html  pyproject.toml  verify_phase1.py
.claude/: settings.local.json
alembic/: env.py
docker/: Dockerfile  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  entrypoint.sh
docs/: API_DOCUMENTATION.md  BACKUP_RESTORE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  GETTING_STARTED.md  PRD-v0.2.md  PRD.md  QUALITY_GATES.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md  UPGRADE_GUIDE.md  USER_GUIDE.md  index.html  security-assessment-2026-02-27.md  security-assessment-prompt.md
docs/explanation/: architecture.md  search-strategies.md  security.md
docs/how-to-guides/: backup-and-restore.md  configure-redis-rate-limiting.md  deploy-production.md  deploy-with-docker.md  troubleshoot.md  upgrade.md  windows-quick-start.md
docs/other/: README.md  red-team-adversarial-assessment-2026-02-25.md  release-checklist.md  security-assessment-post-fix.md  security-audit-api-docker-2026-02-25.md  security-audit.md  security-fixes-completed.md  security-fixes-in-progress.md  security-penetration-test-report.md  test-report.md
docs/plans/: 2026-02-26-sonarr-dark-sidebar-ui-design.md  2026-02-26-sonarr-dark-sidebar-ui.md  2026-02-26-tiered-error-logging-design.md  2026-02-26-tiered-error-logging.md  2026-02-28-feature-enhancements-prd.md  2026-02-28-v020-exclusions-notifications.md  2026-02-28-v021-implementation-plan.md  2026-03-01-v0.4.0-implementation.md  2026-03-01-v0.5.0-design.md  2026-03-01-v0.5.0-implementation.md  2026-03-02-table-tooltips-design.md  2026-03-03-release-manager-skill-plan.md  2026-03-03-update-checker-design.md  2026-03-03-update-checker-plan.md  2026-03-03-websocket-implementation.md  2026-03-04-completion-cards-design.md  2026-03-04-completion-cards-plan.md  2026-03-04-custom-strategy-filters-design.md  2026-03-04-custom-strategy-filters-plan.md  2026-03-04-indexer-budget-visibility-design.md  2026-03-04-indexer-budget-visibility-plan.md  totp-2fa.md  (+4 more)
reports/: SECURITY_AUDIT.md  TEST_REPORT.md  bandit_report.json  safety_report.json
scripts/: backup.sh  deploy.sh  generate-secrets.ps1  generate-secrets.sh  health-check.sh  restore.sh  setup-windows.ps1  upgrade.sh
tests/: conftest.py
(+211 files in other folders)
